# Cloth-Sim

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Cloth.h  cloth.cpp  main.cpp  mouse.h  point.cpp  point.h  renderer.cpp  renderer.h  stick.cpp  stick.h
src/physics/: Physics.hpp  Sim.hpp
